# bachelor-thesis

./: .gitignore  CMakeLists.txt  README.md  build-custom  build_custom.sh  generator.py  parser.py  sysinfo.sh  system_info.txt
asm_tests/: main  main.asm  main.c  test.asm
include/: impl.h  impl_normal.c  types.h
src/: generate_asm.sh  impl_compact.c  main.c  ops.h  ops_basic.c  ops_basic.h  ops_bulk.c  ops_seq.c  types.c  util.c  util.h
src/asm/: impl_compact.c.s  main.c.s  ops_bulk.c.s  ops_seq.c.s  types.c.s  util.c.s
src/tests/: tests.c  tests.h  tests_mat.c  tests_tsr.c  tests_vec.c
test/: a.out  array_desc.h  fibonacci  fibonacci.sc  fibonacci2.sc  intermediate.sc  lextab.py  parsetab.py  preprocessed.c
